# Llama-Eat-Paper

./: .env.example  .gitignore  README.md  pyproject.toml  run.py  run_openreview.py
api/: arxiv.py  bioarxiv.py  info.py  notion.py  openreview.py  slack.py
llama_eat_paper/: cli.py  config.py
llama_eat_paper/api/: bioarxiv.py  info.py  openreview.py
llama_eat_paper/integrations/: __init__.py  arxiv_client.py  biorxiv_client.py  notion_client.py  openreview_client.py
llama_eat_paper/models/: icon.py  paper.py
llama_eat_paper/schemas/: __init__.py
llama_eat_paper/services/: embedding.py  slack_messenger.py
llama_eat_paper/tasks/: conference.py  daily.py
