[project]
name = "llama-eat-paper"
version = "0.1.0"
description = "Recommend related paper with LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=1.4.8",
    "chromadb>=1.0.15",
    "dotenv>=0.9.9",
    "numpy>=2.2.6",
    "ollama>=0.5.1",
    "openreview>=0.0.2",
    "requests>=2.22.0",
    "ruff>=0.12.3",
    "slack-sdk>=3.36.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llama_eat_paper"]
